# coinmarketcap-news-sentiment-analysis

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements.in
backend/: .gitignore  main.py  pyproject.toml  scraper.py
backend/src/data/clean/: .gitignore  cryptopanic_news_clean.parquet  cryptopanic_news_light_normalized.parquet
backend/src/data/raw/: currencies.parquet
backend/src/models/: models.py
backend/src/preprocessing/: .env.example  1-raw_csv_to_parquet.ipynb  2-extract_relevant_rows.ipynb  3-text-normalization.ipynb  4-data_to_db.ipynb
backend/src/routers/: fine_tuning.py
backend/src/tasks/: sentiment_analysis.py
dags/: coinmarketcap_scraper_dag.py
notebooks/: pyproject.toml  training.ipynb  training_x.ipynb
