[project]
name = "coinmarketcap-news-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "notebook>=7.4.4",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "uvicorn>=0.35.0",
    "webdriver-manager>=4.0.2",
]
