[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=4.0.0",
    "fastapi[standard]>=0.115.14",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.3.0.250703",
    "ruff>=0.12.1",
]
